<?xml version="1.0"?>
<package format="2">
    <name>rotate_in_place</name>
    <version>0.0.0</version>
    <description>
        This package provides a simple recovery behavior for Move Base Flex which rotates in place
    </description>
    <maintainer email="innovation@todo.todo">innovation</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>mbf_msgs</build_depend>
    <build_depend>mbf_costmap_core</build_depend>
    <build_depend>mbf_exposed_services</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>mbf_msgs</exec_depend>
    <exec_depend>mbf_costmap_core</exec_depend>
    <exec_depend>mbf_exposed_services</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>

    <export>
        <mbf_costmap_core plugin="${prefix}/rotate_in_place_plugin.xml" />
    </export>

</package>
